refac: getter 추가, 테스트 코드 수정
# Conflicts:
#	backend/src/main/java/com/team05/petmeeting/domain/animal/entity/Animal.java
#	backend/src/main/java/com/team05/petmeeting/domain/shelter/entity/Shelter.java
#	backend/src/main/java/com/team05/petmeeting/domain/user/entity/User.java
#	backend/src/main/java/com/team05/petmeeting/global/entity/BaseEntity.java